--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -17,6 +17,8 @@
 <![endif]-->
 <!-- Style sheet link -->
 <link href="./assets/css/style.css" rel="stylesheet" media="all">
+<script src="/assets/js/lib/jquery-2.1.3.min.js"></script>
+<script src="/assets/js/app.js"></script>
 
 
 </head>
@@ -31,9 +33,9 @@
 
   <div class="main_area">
     <div class="inner">
-      <span>今なら限定キャンペーン中！</span>
+      <span class="border">今なら限定キャンペーン中！</span>
       <h2>手間いらずのダイエット♡<br>『Beautyフォルスコリー235』ラクしてメリハリボディに！</h2>
-      <p>痩せやすい体にする為の燃焼サポート成分「フォルスコリー」や、美容成分の「コラーゲン」「プラセンタ」、さらに女性ホルモンの分泌を促進する「プエラリア」を配合！ただ痩せるのではなく、魅力的なメリハリボディにしてくれるのです♡</p>
+      <p>痩せやすい体にする為の燃焼サポート成分「フォルスコリー」や、<span class="block">美容成分の「コラーゲン」「プラセンタ」、</span><span class="block">さらに女性ホルモンの分泌を促進する「プエラリア」を配合！ただ痩せるのではなく、</span><span class="block">魅力的なメリハリボディにしてくれるのです♡</span></p>
     </div>
   </div>
 
@@ -41,7 +43,8 @@
 
     <div class="aside_content">
     <div class="course">
-      <p><img src="./assets/images/lnav_img_01.png" alt=""></p>
+      <p class="pc_view"><img src="./assets/images/lnav_img_01.png" alt=""></p>
+      <p class="sp_view"><img src="./assets/images/sp_lnav_img_01.png" alt=""></p>
       <div class="link-btn">
         <a href="#">
           今すぐモニターになる♪
@@ -287,7 +290,7 @@
                                 <tbody><tr class="odd">
           <th>お名前<span class="hissu">必須</span></th>
             <td>
-                姓 <input type="text" name="family_name" value="" placeholder="例）鈴木" style="background: rgb(220, 220, 220);">　名 <input type="text" name="given_name" value="" placeholder="例）太郎" style="background: rgb(220, 220, 220);">
+                姓 <input type="text" name="family_name" value="" placeholder="例）鈴木" style="background: rgb(220, 220, 220);">　<span>名 <input type="text" name="given_name" value="" placeholder="例）太郎" style="background: rgb(220, 220, 220);"></span>
             </td>
         </tr>
 
@@ -298,7 +301,7 @@
                                  <tr class="even">
             <th>フリガナ<span class="hissu">必須</span></th>
             <td>
-                セイ <input type="text" name="family_name_kana" value="" placeholder="例）スズキ" style="background: rgb(220, 220, 220);">　メイ <input type="text" name="given_name_kana" value="" placeholder="例）タロウ" style="background: rgb(220, 220, 220);">
+                セイ <input type="text" name="family_name_kana" value="" placeholder="例）スズキ" style="background: rgb(220, 220, 220);">　<span>メイ <input type="text" name="given_name_kana" value="" placeholder="例）タロウ" style="background: rgb(220, 220, 220);"></span>
             </td>
         </tr>
 
@@ -853,8 +856,8 @@
 
           <!-----------ここから申込みボタン----------->
         <tr class="even">
-            <td colspan="2" style="text-align:center;">
-                <img src="/themes/simple_02/p/images/form_btn.png" onmouseover="this.src='/themes/simple_02/p/images/form_btn_on.png'" onmouseout="this.src='/themes/simple_02/p/images/form_btn.png'" name="sub" value="申し込む" id="sub">
+            <td class="submit-btn" colspan="2" style="text-align:center;">
+                <img src="assets/images/form_btn.png" onmouseover="this.src='assets/images/form_btn_on.png'" onmouseout="this.src='assets/images/form_btn.png'" name="sub" value="申し込む" id="sub">
             </td>
         </tr>
           <!-----------ここまで申込みボタン----------->
@@ -894,9 +897,6 @@
 
   </div><!-- /.container -->
 </div><!-- /.wrapper -->
-
-<script src="/assets/js/lib/jquery-2.1.3.min.js"></script>
-<script src="/assets/js/app.js"></script>
 
 </body>
 </html>
