ローカルナビ実装

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -35,7 +35,7 @@
     <div class="inner">
       <span class="border">お試しモニター募集中！</span>
       <h2>クレンジングバームですっぴん美人♡<br>ゴワゴワ乾燥肌からつっぱらないもちもち肌に！</h2>
-      <p>毎日スキンケアをしていても、なんだか化粧ノリがぱっとしない…そんなお悩みはメイクの汚れが原因の場合も…。溜まった汚れや皮脂をしっかり洗い落とし、さらにはりのある肌に♡<br>両方を実感できる大人気のクレンジングバーム！今ならお手軽に試せます！</p>
+      <p>毎日スキンケアをしていても、なんだか化粧ノリがぱっとしない…そんなお悩みはメイクの汚れが<br>原因の場合も…。溜まった汚れや皮脂をしっかり洗い落とし、さらにはりのある肌に♡<br>両方を実感できる大人気のクレンジングバーム！今ならお手軽に試せます！</p>
     </div>
   </div>
 
@@ -47,7 +47,7 @@
           <p class="sp_view"><img src="./assets/images/sp_lnav_img_01.png" alt=""></p>
           <div class="link-btn">
             <a href="#">
-              今すぐモニターになる♪
+              <img src="./assets/images/lnav_img_02.png" alt="今すぐお得に試す！">
             </a>
           </div>
         </div>
@@ -140,32 +140,17 @@
 
     <form id="form-order" method="post" action="/orders/landing/duo/blm500_adcnq_lcr_01_sp#l" accept-charset="utf-8"><div style="display:none;"><input type="hidden" name="_method" value="POST"></div><input type="hidden" name="data[Zwcdb43g2jiv][yf3vvm2j7c8q]" value="0311e1791c1fe92ecd3215fa0472bce6bf2b252d" id="Zwcdb43g2jivYf3vvm2j7c8q">
 
-    <!--<div class="checkbox_wrap">
-    <p class="ttl">当てはまる項目全てにチェックを入れてください。</p>
-
-    <p class="check">
-    <input type="hidden" name="data[CheckBlock][checkbox_age]" id="CheckBlockCheckboxAge_" value="0" /><input type="checkbox" name="data[CheckBlock][checkbox_age]" class="ureru_efo_advanced_honki-check_checkbox" value="1" id="CheckBlockCheckboxAge" /><label for="CheckBlockCheckboxAge">30歳以上の女性の方 <span class="text_red">[必須]</span></label></p>
-    <p class="check">
-    <input type="hidden" name="data[CheckBlock][checkbox_lookingfor]" id="CheckBlockCheckboxLookingfor_" value="0" /><input type="checkbox" name="data[CheckBlock][checkbox_lookingfor]" class="ureru_efo_advanced_honki-check_checkbox" value="1" id="CheckBlockCheckboxLookingfor" /><label for="CheckBlockCheckboxLookingfor">新しいクレンジングをお探しの方 <span class="text_red">[必須]</span></label></p>
-
-    <p class="check">
-    <input type="hidden" name="data[CheckBlock][checkbox_1sttime]" id="CheckBlockCheckbox1sttime_" value="0" /><input type="checkbox" name="data[CheckBlock][checkbox_1sttime]" class="ureru_efo_advanced_honki-check_checkbox" value="1" id="CheckBlockCheckbox1sttime" /><label for="CheckBlockCheckbox1sttime">D.U.O.『ザ クレンジングバーム』を初めてお試しの方 <span class="text_red">[必須]</span></label></p>
-
-    <p class="check">
-    <input type="hidden" name="data[CheckBlock][checkbox_teiki]" id="CheckBlockCheckboxTeiki_" value="0" /><input type="checkbox" name="data[CheckBlock][checkbox_teiki]" class="ureru_efo_advanced_honki-check_checkbox" value="1" id="CheckBlockCheckboxTeiki" /><label for="CheckBlockCheckboxTeiki"><span class="text_red under_line">もし初回半額であれば、D.U.O.『ザ クレンジングバーム』の定期(2880円)に申し込んでもいいという方</span> <span class="text_red">[必須]</span></label></p>
-
-
-    </div>-->
-
-
     <!-- 申込フォーム -->
     <div id="form_landing">
         <h2 id="form_checkout_title" class="form_title">
             お客様情報
         </h2>
 
-        <div id="landing_form-wrapper"><div id="efo_required_box" style="display: block; width: 1205px; margin-left: -282.5px; margin-top: 0px; top: 267px;">必須項目：<span id="efo_required_remaining">残り<strong>10</strong>項目</span></div>
-            <div id="landing_form" style="padding-top: 50px;">
+        <div id="landing_form-wrapper">
+            <!-- <div id="efo_required_box" style="display: block; width: 1205px; margin-left: -282.5px; margin-top: 0px; top: 267px;">
+                必須項目：<span id="efo_required_remaining">残り<strong>10</strong>項目</span>
+            </div> -->
+            <div id="landing_form">
 
                             <div id="input_name" class="form_box form_required">
                   <p class="form_box_label">
